第一个版本6

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>collection-station</title>
+    <style>
+      @font-face {
+        font-family: 'item';
+        src:url('./static/POIRETONE-REGULAR.TTF') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: 'main-title';
+        src:url('./static/CHARLEMAGNESTD-BOLD.OTF') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
