--- a/src/assets/fonts/demo_fontclass.html
+++ b/src/assets/fonts/demo_fontclass.html
@@ -61,6 +61,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-huishouzhan"></i>
+                    <div class="name">回收站</div>
+                    <div class="fontclass">.icon-huishouzhan</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-fanhui"></i>
                     <div class="name">返回</div>
                     <div class="fontclass">.icon-fanhui</div>
