--- a/src/assets/fonts/demo_symbol.html
+++ b/src/assets/fonts/demo_symbol.html
@@ -93,6 +93,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-huishouzhan"></use>
+                    </svg>
+                    <div class="name">回收站</div>
+                    <div class="fontclass">#icon-huishouzhan</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-fanhui"></use>
                     </svg>
                     <div class="name">返回</div>
