--- a/src/assets/fonts/demo_unicode.html
+++ b/src/assets/fonts/demo_unicode.html
@@ -81,6 +81,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe61a;</i>
+                    <div class="name">回收站</div>
+                    <div class="code">&amp;#xe61a;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe66f;</i>
                     <div class="name">返回</div>
                     <div class="code">&amp;#xe66f;</div>
